# quadrai

./: .gitignore  DEVELOPMENT.md  GAMEPLAY.md  README.md  build.bat  build.ps1  build_quadra.ps1
.opencode/agent/: qserv.md
quadra/: .gitignore  CMakeLists.txt  README.md  config.h.cmakein  resources.txt
quadra/VisualC++/: Quadra.vcproj  Skelton.vcproj  packages.config  quadra.rc  quadra2003.vcproj  res.bat  wadder.vcproj  wadder2003.vcproj
quadra/server/qserv/: build_package.ps1  build_qserv.ps1  data.go  dumper.go  go.mod  handler.go  log.go  main.go  qserv.md  qserv_readme.md  qserv_release.txt  release.txt  test.ps1  test_qserv.ps1
quadra/source/: cfgfile.cc  game.cc  http_request.cc  http_request.h  main.cc  menu.cc  net.cc  net.h  packets.h  palette.cc  qserv.cc  quadra.cc  res.cc  res_name.cc  res_name.h  resfile.cc  resmanager.cc  texte.h  types.h  update.cc  video_dumb.cc
quadra/textes/: anglais.txt  chinese_s.txt  chinese_t.txt  francais.txt
